# GroundStation

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements-dev.txt
config/: core_demo.example.json  demo_ui.json  radar_demo.example.json
docs/: architecture_v0.1.md  assumptions_and_unknowns.md  demo_ui_manual_test.md  implementation_plan.md  protocol_findings.md  qgroundcontrol_functional_reference.md  requirements_v0.1.md  source_inventory.md  temporary_drone_protocol_v0.1.md  third_party_references.md
src/ground_station/: __init__.py  app.py
src/ground_station/config/: __init__.py  app.py  core.py  radar.py
src/ground_station/domain/: __init__.py  events.py  mission.py  radar.py
src/ground_station/drone_protocol/: __init__.py  base.py  receiver_diagnostics.py  temporary_demo.py
src/ground_station/map/: __init__.py  map_models.py  map_widget.py  tile_map.py
src/ground_station/mission/: __init__.py  service.py
src/ground_station/network/: __init__.py  drone_udp.py  radar_udp.py
src/ground_station/radar_protocol/: __init__.py  checksum.py  constants.py  errors.py  parser.py  simulator.py
src/ground_station/selection/: __init__.py  service.py
src/ground_station/sending/: __init__.py  scheduler.py
src/ground_station/tracks/: __init__.py  repository.py
tests/: test_app_config_and_display.py  test_manual_radar_golden.py  test_map_workspace.py  test_radar_parser.py  test_scheduler_transport.py  test_temporary_drone_protocol.py  test_tracks_selection_mission.py  test_ui_demo.py
tools/: drone_receiver_simulator.py  radar_simulator.py
(+24 files in other folders)
