[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ground-station-demo"
version = "0.1.0"
description = "Windows UAV ground station demo - testable core business loop"
requires-python = ">=3.11,<3.12"
dependencies = ["PyQt5>=5.15.10,<5.16"]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0", "pytest-qt>=4.4,<5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
